[gd_scene load_steps=4 format=3 uid="uid://vuhaw14rmwsy"]

[ext_resource type="Script" uid="uid://8tkj3antpjgw" path="res://source/enemies/snail.gd" id="1_6j73w"]
[ext_resource type="Texture2D" uid="uid://bq0a76bksc4th" path="res://assets/snail.png" id="1_mcwg6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j73w"]
size = Vector2(16, 13)

[node name="Snail" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_6j73w")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_6j73w")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_mcwg6")

[node name="RayCasts" type="Node2D" parent="."]

[node name="WallDetector" type="RayCast2D" parent="RayCasts"]
position = Vector2(5, 0)
target_position = Vector2(4, 0)
collision_mask = 5

[node name="GroundDetector" type="RayCast2D" parent="RayCasts"]
position = Vector2(6, 5)
target_position = Vector2(0, 4)
